# nokkhum

./: .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  install_opencv.sh  nokkhum.cfg.sample  pyproject.toml  requirements.txt  setup.py
nokkhum/: __init__.py  default_settings.py
nokkhum/cmd/: compute.py  controller.py  initdb.py  processor.py  streaming.py  web.py
nokkhum/compute/: __init__.py  machines.py  monitors.py  server.py  storages.py
nokkhum/compute/processors/: manager.py  processor_controller.py  processors.py
nokkhum/controller/: __init__.py  commands.py  compute_nodes.py  processors.py  results.py  server.py  storages.py
nokkhum/models/: __init__.py  cameras.py  compute_nodes.py  gridviews.py  oauth2.py  processors.py  projects.py  storages.py  users.py
nokkhum/processor/: __init__.py  captures.py  commands.py  recorders.py  server.py  utils.py
nokkhum/processor/processors/: acquisitors.py  (+4 more)
nokkhum/streaming/: __init__.py  base_camera.py  camera.py  cameras_live.py  live_streaming.py  streaming_ws.py  subscribers.py
nokkhum/utils/: config.py
nokkhum/web/: __init__.py  acl.py  nats.py  oauth2.py  request_context.py
playground/nats-stream/: server.py  subcriber.py
scripts/: auto-build-brython  auto-test  build-brython  initdb  nokkhum-uwsgi-streaming.ini  nokkhum-uwsgi-streaming.sh  nokkhum-uwsgi-web.ini  nokkhum-uwsgi-web.sh  run-compute  run-controller  run-streaming  run-test-storage-controller  run-web  yana-uwsgi-streaming.ini  yana-uwsgi-streaming.sh  yana-uwsgi-web.ini  yana-uwsgi-web.sh
(+103 files in other folders)
